-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.7.0
-
None
-
-
08ec1f93267eb66f52ee5ad61ed3aecc7cf68a16 (qt-creator/qt-creator/4.7)
not sure what and why.. but I had QC sources opened inside QC and did some git operations on the cmdline - after switching back to QC I was asked to update the changed files inside QC as well and I've clicked 'Yes for All'
backtrace is attached - (basically it's a nullptr access of the lambdaDeclaratorAST in cppselectionchanger.cpp:927)
For Gerrit Dashboard: QTCREATORBUG-20994 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
240522,3 | CppTools: Fix crash on smart selection change with lambda | 4.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |