CppTools: Fix crash on smart selection change with lambda

...in case there is no lambda declarator provided, e.g.: []{}

Fixes: QTCREATORBUG-20994
Change-Id: I6a77cffe4e585422f1ed0639cabc687d3d123f5d
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>